[metadata]
name = evapi
author = Canvas GFX
home-page = https://github.com/canvas-gfx/evapi-py
description = API wrapper for Canvas Envision's local server.
platform = any

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.7
packages = evapi
setup_requires =
    setuptools >=38.3.0

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError

[coverage:run]
source = evapi
omit =
    ./tests/*
    ./doc/*
